# python-base

./: .cursorrules  .env.example  .gitignore  AGENT.md  CLAUDE.md  GEMINI.md  README.md  coverage.lcov  pyproject.toml  run.sh  todo.md
.context/rules/: architecture.md  dto-naming.md  logger.md  python.md  testing.md
.context/skills/: bootstrap-and-registry.md  endpoint.md  migration.md  rabbitmq.md  repository.md  specs-consultation.md  usecase.md  uv.md
.context/skills/bootstrap-and-registry/: SKILL.md
.context/skills/endpoint/: SKILL.md
.context/skills/migration/: SKILL.md
.context/skills/rabbitmq/: SKILL.md
.context/skills/repository/: SKILL.md
.context/skills/specs-consultation/: SKILL.md
.context/skills/usecase/: SKILL.md
.context/skills/uv/: SKILL.md
.cursor/: settings.json
.cursor/rules/: bootstrap-and-registry.mdc  dto-naming.mdc  precommit.mdc  pytest.mdc  python-fastapi.mdc  python-logger.mdc  python-repository.mdc  python-uv.mdc  python.mdc  specs-consultation.mdc
.docs/: README.md
.docs/templates/: adr-template.md  specs-template.md
.readme/: bootstrap-and-registry-explanation.md  precommit.md  settings-in-code.md  uv-env-setup.md
.readme/img/: readme-settings-in-code.md
.scripts/: clean.sh  config.sh  list_loggers.py  set-service.sh  switch_env.py
service/: main.py
service/config/: bootstrap.py  settings.py  vocabulary.py
service/shared/: __init__.py  logger.py  registry.py  terminal_colors.py
tests/unit/: test_main.py
